# 2020-2-computer-programming-hw6

problem1/: admin_ui.cpp  client_ui.cpp  client_ui.h  shopping_db.cpp  shopping_db.h  test.cpp  user.cpp  user.h
problem1/test/: 1.out  2.out  3.out
problem2/: BackEnd.cpp  BackEnd.h  CMakeLists.txt  FrontEnd.cpp  FrontEnd.h  Post.cpp  Post.h  User.cpp  User.h  app.cpp
problem2/data/admin/post/: 47.txt  48.txt  49.txt  50.txt  51.txt  52.txt  53.txt  54.txt  55.txt  56.txt  57.txt  58.txt  59.txt  60.txt
problem2/test/: 1_1.out  2.out  3.out  4.out
